feat: TYPO3 Update to v13

--- a/packages/leseohren/Resources/Private/Partials/Event/Properties.html
+++ b/packages/leseohren/Resources/Private/Partials/Event/Properties.html
@@ -58,7 +58,7 @@
                     <f:render partial="Event/SpeakerList" arguments="{event: event}" />
                     <div class="card">
                         <div class="card-header">
-                            <v:l key="tx_leseohren_domain_model_event.location" />
+                            <f:translate key="tx_leseohren_domain_model_event.location" />
                         </div>
                         <div class="card-body">
                             {event.location -> f:format.nl2br()}
