--- a/packages/leseohren/Resources/Private/Partials/Event/SpeakerList.html
+++ b/packages/leseohren/Resources/Private/Partials/Event/SpeakerList.html
@@ -3,7 +3,7 @@
 
 <div class="card">
     <div class="card-header">
-        <v:l key="tx_leseohren.speaker" />
+        <f:translate key="tx_leseohren.speaker" />
     </div>
     <div class="card-body">
         <table class="table table-striped">
