--- a/packages/leseohren/Resources/Private/Partials/Organization/Readers.html
+++ b/packages/leseohren/Resources/Private/Partials/Organization/Readers.html
@@ -1,5 +1,7 @@
-<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
-{namespace v=FluidTYPO3\Vhs\ViewHelpers}
+<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
+      xmlns:v="http://typo3.org/ns/vhs/ViewHelpers"
+      data-namespace-typo3-fluid="true">
+
 
 <f:if condition="{organization.vlpaten -> f:count()} > 0 OR {organization.vpNumber} > 0">
     <div class="container">
