chore: Update DataTables  dependencies, enhance TypoScript configuration for DataTables integration

--- a/packages/leseohren/Resources/Private/Templates/Person/List.html
+++ b/packages/leseohren/Resources/Private/Templates/Person/List.html
@@ -6,7 +6,7 @@ data-namespace-typo3-fluid="true">
 <f:section name="content">
     <vac:asset.vite entry="EXT:leseohren/Resources/Private/DataTables.entry.js"
         scriptTagAttributes="{
-            type: 'text/javascript',
+            type: 'module',
             async: 1
         }"
         addCss="1"
