--- a/packages/leseohren/Resources/Private/Layouts/Default.html
+++ b/packages/leseohren/Resources/Private/Layouts/Default.html
@@ -4,7 +4,7 @@ data-namespace-typo3-fluid="true">
 
 <vac:asset.vite entry="EXT:leseohren/Resources/Private/ext.leseohren.entry.js"
     scriptTagAttributes="{
-        type: 'text/javascript',
+        type: 'module',
         async: 1
     }"
     addCss="1"
