chore: add dark mode styles to footer and navigation

--- a/packages/skombase13/Resources/Private/Scss/layout/_navigation.scss
+++ b/packages/skombase13/Resources/Private/Scss/layout/_navigation.scss
@@ -1,4 +1,14 @@
 //
+// Navbar
+//
+@include color-mode(dark) {
+    .navbar-default {
+        background-color: #151719 !important;
+    }
+}
+
+
+//
 // Meta-Menu
 //
 .meta-menu {
