--- a/packages/leseohren/Resources/Private/Scss/plugins/leseohren/_leseohren-personen.scss
+++ b/packages/leseohren/Resources/Private/Scss/plugins/leseohren/_leseohren-personen.scss
@@ -1,6 +1,6 @@
 @include new(person, component){
     @include has(name) {
-        font-weight: bold;
+        font-weight: 300;
     };
     @include has(gender-icon) {
         font-size: 1.5rem;
