--- a/packages/skombase13/Resources/Private/Scss/Main.entry.scss
+++ b/packages/skombase13/Resources/Private/Scss/Main.entry.scss
@@ -89,6 +89,7 @@
 // reusable components
 //
 @import "components/buttons";
+@import "components/cards";
 @import "components/modals";
 @import "components/color-mode-toggle";
 //@import "components/links";
