--- a/packages/skombase13/Resources/Private/Scss/layout/_footer.scss
+++ b/packages/skombase13/Resources/Private/Scss/layout/_footer.scss
@@ -1,3 +1,12 @@
+
+.footer-section-meta {
+    color: rgb(33, 37, 41) !important;
+    a, a:hover {
+        color: $link-color !important;
+    }
+}
+
+
 @include color-mode(dark) {
     .footer-section-content {
         background: #151719 !important;
@@ -8,7 +17,5 @@
     }
     .footer-section-meta {
         background: $gray-900;
-        --frame-link-color: #ff9900;
-        --frame-link-hover-color: #ff9900;
     }
 }
