--- a/packages/leseohren/Resources/Private/Partials/Organization/FormFields.html
+++ b/packages/leseohren/Resources/Private/Partials/Organization/FormFields.html
@@ -113,10 +113,22 @@
                 <f:form.textfield property="url" id="url" pattern="https?://.+" class="form-control" />
             </div>
             <div class="col-sm-6">
+                <label for="lastcontact" class="form-label">
+                    <f:translate key="tx_leseohren_domain_model_organization.lastcontact" />:
+                </label>
+                <f:form.textfield property="lastcontact" id="lastcontact" class="form-control"
+                    value="{organization.lastcontact -> f:format.date(format: 'd.m.Y')}" />
+            </div>
+        </div>
+        <div class="row mb-3">
+            <div class="col-sm-6">
                 <label for="openingHours" class="form-label">
                     <f:translate key="tx_leseohren_domain_model_organization.openingHours" />:
                 </label>
                 <f:form.textarea property="openingHours" id="openingHours" class="form-control" />
+            </div>
+            <div class="col-sm-6">
+
             </div>
         </div>
     </div>
