feat: update organization forms to include contextual messages for category restrictions on Vorlesepaten and contact persons

--- a/packages/leseohren/Resources/Private/Partials/Organization/FormFields.html
+++ b/packages/leseohren/Resources/Private/Partials/Organization/FormFields.html
@@ -120,6 +120,7 @@
                     prependOptionLabel="Bitte wählen"
                     prependOptionValue=""
                 />
+                <p class="text-muted small">Nur Personen der Kategorie 'Kontaktperson' können zugeordnet werden!</p>
             </div>
             <div class="col-sm-6">
                 <label for="lastcontact" class="form-label">
