--- a/packages/leseohren/Resources/Private/Templates/Person/List.html
+++ b/packages/leseohren/Resources/Private/Templates/Person/List.html
@@ -29,6 +29,7 @@ data-namespace-typo3-fluid="true">
                 <th><f:translate key="tx_leseohren_domain_model_person.email" /></th>
                 <th>Telefon</th>
                 <th>Liest in</th>
+                <th>Organisation Kategorien</th>
                 <th class="dt-head-center">FZ</th>
                 <th class="dt-head-center">Aktionen</th>
             </tr>
@@ -72,6 +73,24 @@ data-namespace-typo3-fluid="true">
                                     {organization.name -> f:format.crop(maxCharacters: 17)},<br />
                             </f:link.action>
                         </f:for>
+                    </td>
+                    <td>
+                        <f:if condition="{person.organizations}">
+                            <organization-categories class="c-organization__categories" data-search="
+                                <f:for each='{person.organizations}' as='org' iteration='orgIt'>
+                                    <f:for each='{org.categories}' as='orgcat' iteration='orgcatit'>
+                                        {orgcat.title}<f:if condition='!{orgcatit.isLast}'>, </f:if>
+                                    </f:for>
+                                    <f:if condition='!{orgIt.isLast}'>, </f:if>
+                                </f:for>
+                            ">
+                                <f:for each="{person.organizations}" as="org">
+                                    <f:for each="{org.categories}" as="orgCategory">
+                                        <span class="badge bg-info">{orgCategory.title -> f:format.htmlspecialchars()}</span><br />
+                                    </f:for>
+                                </f:for>
+                            </organization-categories>
+                        </f:if>
                     </td>
                     <td class="dt-body-center">
                         <f:if condition="{person.fuehrungszeugnisChecked}">
