fix: update organization category badge color in person list template for improved visual consistency

--- a/packages/leseohren/Resources/Private/Templates/Person/List.html
+++ b/packages/leseohren/Resources/Private/Templates/Person/List.html
@@ -86,7 +86,7 @@ data-namespace-typo3-fluid="true">
                             ">
                                 <f:for each="{person.organizations}" as="org">
                                     <f:for each="{org.categories}" as="orgCategory">
-                                        <span class="badge bg-info">{orgCategory.title -> f:format.htmlspecialchars()}</span><br />
+                                        <span class="badge bg-primary">{orgCategory.title -> f:format.htmlspecialchars()}</span><br />
                                     </f:for>
                                 </f:for>
                             </organization-categories>
