--- a/packages/leseohren/Resources/Private/Partials/Organization/FormFields.html
+++ b/packages/leseohren/Resources/Private/Partials/Organization/FormFields.html
@@ -110,17 +110,7 @@
                 <label for="contactPerson" class="form-label">
                     <f:translate key="tx_leseohren_domain_model_organization.contact_person" />:
                 </label>
-                <f:form.select
-                    property="contactPerson"
-                    id="contactPerson"
-                    class="form-select"
-                    options="{contactPersons}"
-                    optionValueField="uid"
-                    optionLabelField="fullname"
-                    prependOptionLabel="Bitte wählen"
-                    prependOptionValue=""
-                />
-                <p class="text-muted small">Nur Personen der Kategorie 'Kontaktperson' können zugeordnet werden!</p>
+                <f:form.textarea property="contactPerson" id="contactPerson" class="form-control" />
             </div>
             <div class="col-sm-6">
                 <label for="lastcontact" class="form-label">
